[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-sdk.git"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
	"system-parachains/assets/asset-hub-kusama",
	"system-parachains/assets/asset-hub-polkadot",
	"system-parachains/collectives/collectives-polkadot",
	"system-parachains/common",
]

[diener_exclude]
# External crates
codec = { package = "parity-scale-codec" }
assert_matches = {}
paste = {}
# Runtime crates
asset-hub-kusama-runtime = {}
asset-hub-polkadot-runtime = {}
collectives-polkadot-runtime = {}
bridge-hub-polkadot-runtime = {}
bridge-hub-kusama-runtime = {}
# Others
integration-tests-common = {}
xcm-emulator = {}
