[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-sdk.git"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
	"assets/asset-hub-kusama",
	"assets/asset-hub-polkadot",
	"collectives/collectives-polkadot",
	"common",
]

[diener_exclude]
# External crates
codec = { package = "parity-scale-codec" }
assert_matches = {}
paste = {}
# Runtime crates
asset-hub-kusama-runtime = {}
asset-hub-polkadot-runtime = {}
collectives-polkadot-runtime = {}
bridge-hub-polkadot-runtime = {}
bridge-hub-kusama-runtime = {}
# Local crates
integration-tests-common = {}
# Others
xcm-emulator = {}
