[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-sdk.git"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
	"assets/asset-hub-kusama",
	"assets/asset-hub-polkadot",
	"collectives/collectives-polkadot",
	"common",
]

[diener_exclude]
# External crates
codec = { package = "parity-scale-codec" }
assert_matches = {}
paste = {}
# Runtime crates
asset-hub-kusama-runtime = {}
asset-hub-polkadot-runtime = {}
collectives-polkadot-runtime = {}
bridge-hub-polkadot-runtime = {}
bridge-hub-kusama-runtime = {}
# Polkadot-SDK crates
xcm-emulator = {}
# Local crates
integration-tests-common = {}

# This patching is needed until `xcm-emulator` and `penpal-runtime` have proper
# crates.io releases matching current runtime dependencies versions
[patch."https://github.com/paritytech/polkadot-sdk"]
frame-support = { version = "23.0.0" }
frame-system = { version = "23.0.0" }
frame-try-runtime = { version = "0.29.0" }
pallet-balances = { version = "23.0.0" }
pallet-message-queue = { version = "26.0.0" }
cumulus-primitives-core = { version = "0.2.0" }
cumulus-pallet-parachain-system = { version = "0.2.0" }
cumulus-primitives-parachain-inherent = { version = "0.2.0" }
cumulus-test-relay-sproof-builder = { version = "0.2.0" }
cumulus-pallet-aura-ext = { version = "0.2.0" }
parachains-common = { version = "2.0.0" }
xcm = { package = "staging-xcm", version = "2.0.0" }
xcm-executor = { package = "staging-xcm-executor", version = "2.0.0" }
cumulus-pallet-dmp-queue = { version = "0.2.0" }
cumulus-pallet-session-benchmarking = { version = "4.0.0" }
cumulus-pallet-xcm = { version = "0.2.0" }
cumulus-pallet-xcmp-queue = { version = "0.2.0" }
cumulus-primitives-utility = { version = "0.2.0" }
frame-benchmarking = { version = "23.0.0" }
frame-election-provider-solution-type = { version = "10.0.0" }
frame-election-provider-support = { version = "23.0.0" }
frame-executive = { version = "23.0.0" }
frame-support-procedural = { version = "18.0.0" }
frame-support-procedural-tools = { version = "7.0.0" }
frame-system-benchmarking = { version = "23.0.0" }
frame-system-rpc-runtime-api = { version = "21.0.0" }
pallet-asset-tx-payment = { version = "23.0.0" }
pallet-assets = { version = "24.0.0" }
pallet-aura = { version = "22.0.0" }
pallet-authorship = { version = "23.0.0" }
pallet-collator-selection = { version = "4.0.0" }
pallet-election-provider-multi-phase = { version = "22.0.0" }
pallet-election-provider-support-benchmarking = { version = "22.0.0" }
pallet-fast-unstake = { version = "22.0.0" }
pallet-session = { version = "23.0.0" }
pallet-staking = { version = "23.0.0" }
pallet-staking-reward-fn = { version = "14.0.0" }
pallet-sudo = { version = "23.0.0" }
pallet-timestamp = { version = "22.0.0" }
pallet-transaction-payment = { version = "23.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "23.0.0" }
pallet-treasury = { version = "22.0.0" }
pallet-vesting = { version = "23.0.0" }
pallet-xcm = { version = "2.0.0" }
polkadot-primitives = { version = "2.0.0" }
polkadot-parachain-primitives = { version = "1.0.0" }
polkadot-runtime-parachains = { version = "2.0.0" }
polkadot-runtime-common = { version = "2.0.0" }
slot-range-helper = { version = "2.0.0" }
sp-io = { version = "25.0.0" }
sp-core = { version = "23.0.0" }
sp-std = { version = "10.0.0" }
sp-runtime = { version = "26.0.0" }
sp-arithmetic = { version = "18.0.0" }
sp-tracing = { version = "12.0.0" }
sp-timestamp = { version = "21.0.0" }
sp-storage = { version = "15.0.0" }
sp-externalities = { version = "0.21.0" }
sp-weights = { version = "22.0.0" }
sp-api = { version = "21.0.0" }
sp-api-proc-macro = { version = "10.0.0" }
sp-application-crypto = { version = "25.0.0" }
sp-block-builder = { version = "21.0.0" }
sp-consensus-aura = { version = "0.27.0" }
sp-consensus-slots = { version = "0.27.0" }
sp-core-hashing = { version = "11.0.0" }
sp-core-hashing-proc-macro = { version = "11.0.0" }
sp-inherents = { version = "21.0.0" }
sp-keystore = { version = "0.29.0" }
sp-maybe-compressed-blob = { version = "7.0.0" }
sp-metadata-ir = { version = "0.2.0" }
sp-npos-elections = { version = "21.0.0" }
sp-offchain = { version = "21.0.0" }
sp-panic-handler = { version = "10.0.0" }
sp-session = { version = "22.0.0" }
sp-staking = { version = "21.0.0" }
sp-state-machine = { version = "0.30.0" }
sp-transaction-pool = { version = "21.0.0" }
sp-trie = { version = "24.0.0" }
sp-version = { version = "24.0.0" }
sp-version-proc-macro = { version = "10.0.0" }
staging-parachain-info = { version = "0.2.0" }
staging-xcm-builder = { version = "2.0.0" }
substrate-wasm-builder = { version = "12.0.0" }
