[package]
name = "kusama-system-network"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Kusama System emulated network"
publish = false

[dependencies]
# Cumulus
xcm-emulator = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "nacho/xcm-emulator-generic-network-chain" }
integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "aa54bb11e732e5db6c1e69bd244147649ebd6824" }

# Local
kusama-chain = { path = "../../chains/relays/kusama" }
asset-hub-kusama-chain = { path = "../../chains/system-parachains/asset-hubs/asset-hub-kusama" }
