[package]
name = "kusama-chain"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Kusama emulated chain"
publish = false

[dependencies]
# Substrate
sp-core = { default-features = false, version = "23.0.0" }
sp-authority-discovery = { version = "21.0.0" }
grandpa = { package = "sc-consensus-grandpa", version = "0.14.0" }
sp-runtime = { version = "26.0.0" }
sp-consensus-babe = { version = "0.27.0" }
pallet-im-online = { version = "22.0.0" }
pallet-staking = { version = "23.0.0" }

# Polakadot
polkadot-parachain-primitives = { default-features = false, version = "1.0.0" }
beefy-primitives = { package = "sp-consensus-beefy", version = "8.0.0" }
polkadot-primitives = { version = "2.0.0" }
polkadot-runtime-parachains = { version = "2.0.0" }
parachains-common = { version = "2.0.0" }
kusama-runtime-constants = { version = "2.0.0" }

# Cumulus
xcm-emulator = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "nacho/xcm-emulator-generic-network-chain" }
integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "aa54bb11e732e5db6c1e69bd244147649ebd6824" }

# Fellows Runtime
# kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/polkadot-fellows/runtimes", branch = "main" }
kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/paritytech/polkadot-sdk", rev = "aa54bb11e732e5db6c1e69bd244147649ebd6824" }
