[package]
name = "asset-hub-kusama-integration-tests"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Asset Hub Kusama runtime integration tests with xcm-emulator"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
assert_matches = "1.5.0"

# Substrate
sp-runtime = { default-features = false, version = "26.0.0" }
frame-support = { default-features = false, version = "23.0.0" }
frame-system = { default-features = false, version = "23.0.0" }
pallet-balances = { default-features = false, version = "23.0.0" }
pallet-assets = { default-features = false, version = "24.0.0" }
pallet-asset-conversion = { default-features = false, version = "5.0.0" }

# Polkadot
polkadot-core-primitives = { default-features = false, version = "2.0.0" }
polkadot-parachain-primitives = { default-features = false, version = "1.0.0" }
polkadot-runtime-parachains = { version = "2.0.0" }
xcm = { package = "staging-xcm", default-features = false, version = "2.0.0" }
pallet-xcm = { default-features = false, version = "2.0.0" }

# Cumulus
parachains-common = { version = "2.0.0" }
asset-hub-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes", branch = "main" }
xcm-emulator = { default-features = false, version = "0.1.0" }

# Local
integration-tests-common = { path = "../../common", default-features = false }

# [features]
# runtime-benchmarks = [
# 	"asset-hub-kusama-runtime/runtime-benchmarks",
# 	"frame-support/runtime-benchmarks",
# 	"frame-system/runtime-benchmarks",
# 	"integration-tests-common/runtime-benchmarks",
# 	"pallet-asset-conversion/runtime-benchmarks",
# 	"pallet-assets/runtime-benchmarks",
# 	"pallet-balances/runtime-benchmarks",
# 	"pallet-xcm/runtime-benchmarks",
# 	"parachains-common/runtime-benchmarks",
# 	"polkadot-parachain-primitives/runtime-benchmarks",
# 	"polkadot-runtime-parachains/runtime-benchmarks",
# 	"polkadot-runtime/runtime-benchmarks",
# 	"sp-runtime/runtime-benchmarks",
# ]
