[package]
name = "collectives-polkadot-integration-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Polkadot Collectives parachain runtime integration tests based on xcm-emulator"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }

# Substrate
sp-runtime = { default-features = false, version = "26.0.0" }
frame-support = { default-features = false, version = "23.0.0" }
sp-core = { default-features = false, version = "23.0.0" }
pallet-assets = { default-features = false, version = "24.0.0" }
pallet-balances = { default-features = false, version = "23.0.0" }
pallet-core-fellowship = { default-features = false, version = "7.0.0" }
pallet-salary = { default-features = false, version = "8.0.0" }

# Polkadot
polkadot-core-primitives = { default-features = false, version = "2.0.0" }
polkadot-parachain-primitives = { default-features = false, version = "1.0.0" }
polkadot-runtime-parachains = { version = "2.0.0" }
xcm = { package = "staging-xcm", default-features = false, version = "2.0.0" }
pallet-xcm = { default-features = false, version = "2.0.0" }

# Cumulus
parachains-common = { version = "2.0.0" }
cumulus-pallet-xcmp-queue = { default-features = false, version = "0.2.0" }
cumulus-pallet-parachain-system = { version = "0.2.0" }
collectives-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes", branch = "main" }
xcm-emulator = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-crates-io-v1.1.0" }

# Local
integration-tests-common = { path = "../../common", default-features = false }
